--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: python
 python:
   - "2.7"
-  - "3.2"
   - "3.3"
 # command to install dependencies
 install: "pip install -r requirements.txt --use-mirrors"
 # command to run tests
-script: "python -m unittest tests.all_tests"
+script: 
+  - cd catho
+  - python -m unittest discover
